# data-pipeline-demo

./: .gitignore  DataPipelineWorkflowAPIFailure.py  DataPipelineWorkflowAdvancedVisibility.py  DataPipelineWorkflowHappyPath.py  DataPipelineWorkflowHumanInLoopSignal.py  DataPipelineWorkflowHumanInLoopUpdate.py  DataPipelineWorkflowNonRecoverableFailure.py  DataPipelineWorkflowRecoverableFailure.py  DataPipelineWorkflowScenarios.py  README.md  activities.py  client.py  data_pipeline_workflows.py  dataobjects.py  pyproject.toml  run_worker.py  signal_load_complete.py  start_data_pipeline.py  start_data_pipeline_wait_signal.py  worker.py
demodata/working/: info.csv  info.json
ui/: app.py  data.py  pyproject.toml
ui/templates/: base.html  confirmation.html  index.html  job_progress.html
